--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,8 @@ h1{
   height:50vh;
   display: inline-block;
 }
-.button{  
+.button{
+  margin: 10px;  
   border-radius: 5%;
   border: 2px solid white; /* Green */
   color: white;
@@ -35,11 +36,11 @@ h1{
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 9px #444D59;
 }
 .button:active {
   background-color: #3e8e41;
-  box-shadow: 0 5px #666;
+  box-shadow: 0 5px #444D59;
   transform: translateY(4px);
 }
 .button:hover {
