--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ img {
   margin:10px;
   
 }
-.central-text{
+#central-text{
   
   position: absolute;
   top: 50%;
@@ -29,10 +29,11 @@ h1{
   margin:10px;
   color: white;
 }
-.profile{
+#profile{
   padding:10px;
   height:50vh;
-  display: inline-block;
+  position: relative;
+
 }
 .button{
   margin: 10px;  
@@ -119,3 +120,17 @@ h1{
   0%{opacity:1; content:"|"}
   50%{opacity:0; content:"|"}
 } 
+
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(241, 14, 241, 0.959); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
